assets/css/styles.css
/*===== GOOGLE FONTS =====*/
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap");
/*===== VARIABLES CSS =====*/
:root{
  --header-height: 3rem;
  --font-semi: 600;
}

/*===== Colores =====*/
:root{
  --first-color: #fff;
  --second-color: #00ffea;
  --third-color: #000;
}

/*===== Fuente y tipografia =====*/
:root{
  --body-font: 'Poppins', sans-serif;
  --big-font-size: 2rem;
  --h2-font-size: 1.25rem;
  --normal-font-size: 0.938rem;
}
@media screen and (min-width: 768px){
  :root{
    --big-font-size: 3.5rem;
    --h2-font-size: 2rem;
    --normal-font-size: 1rem;
  }
}

/*===== Margenes =====*/
:root{
  --mb-1: 0.5rem;
  --mb-2: 1rem;
  --mb-3: 1.5rem;
  --mb-4: 2rem;
  --mb-5: 2.5rem;
  --mb-6: 3rem;
}

/*===== z index =====*/
:root{
  --z-back: -10;
  --z-normal: 1;
  --z-tooltip: 10;
  --z-fixed: 100;
}

/*===== BASE =====*/
*,::before,::after{
  box-sizing: border-box;
}
html{
  scroll-behavior: smooth;
  background-color: #000;
}
body{
  margin: var(--header-height) 0 0 0;
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  color: var(--first-color);
}
h1,h2,p{
  margin: 0;
}
ul{
  margin: 0;
  padding: 0;
  list-style: none;
}
a{
  text-decoration: none;
}
img{
  max-width: 100%;
  height: auto;
  display: block;
  z-index: -1;
}

.stack {
  font-weight: 300;
  font-style: italic;
  color: #00ffea;
  letter-spacing: 1px;
}

/*===== CLASS CSS ===== */
.section-title{
  position: relative;
  font-size: var(--h2-font-size);
  color: var(--first-color);
  margin-top: var(--mb-2);
  margin-bottom: var(--mb-4);
  text-align: center;
}
.section-title::after{
  position: absolute;
  content: "";
  width: 64px;
  height: 0.18rem;
  left: 0;
  right: 0;
  margin: auto;
  top: 2rem;
  background-color: var(--second-color);
}
.section{
  padding-top: 3rem;
  padding-bottom: 2rem;
}

/*===== LAYOUT =====*/
.bd-grid{
  max-width: 1024px;
  display: grid;
  grid-template-columns: 100%;
  grid-column-gap: 2rem;
  width: calc(100% - 2rem);
  margin-left: var(--mb-2);
  margin-right: var(--mb-2);
}
.l-header{
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--z-fixed);
  box-shadow: 0 1px 4px rgba(146,161,176,.15);
}

/*===== NAV =====*/
.nav{
  background-color: #000;
  height: var(--header-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: var(--font-semi);
}
@media screen and (max-width: 768px){
  .nav__menu{
    position: fixed;
    top: var(--header-height);
    right: -100%;
    width: 80%;
    height: 100%;
    padding: 2rem;
    background-color: var(--second-color);
    transition: .5s;
  }
}
.nav__item{
  margin-bottom: var(--mb-4);
}
.nav__link{
  position: relative;
  color: var(--third-color);
}
.nav__link:hover{
  position: relative;
  
}
.nav__link:hover::after{
  position: absolute;
  content: "";
  width: 100%;
  height: 0.18rem;
  left: 0;
  top: 2rem;
  background-color: var(--second-color);
}
.nav__logo{
  color: var(--second-color) !important;
}
.nav__toggle{
  color: var(--second-color);
  font-size: 1.5rem;
  cursor: pointer;
}

/*Active menu*/
.active::after{
  position: absolute;
  content: "";
  width: 100%;
  height: 0.18rem;
  left: 0;
  top: 2rem;
  background-color: var(--second-color);
}

/*=== Show menu ===*/
.show{
  right: 0;
}

/*===== HOME =====*/
.home{
  height: calc(100vh - 3rem);
  row-gap: 1rem;
}
.home__data{
  align-self: center;
}
.home__title{
  font-size: var(--big-font-size);
  margin-bottom: var(--mb-5);
  background: -webkit-linear-gradient(rgb(255, 255, 255), rgb(95, 236, 255));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.home__title-color{
  color: var(--second-color);
}
.home__social{
  display: flex;
  flex-direction: column;
}
.home__social-icon{
  width: max-content;
  margin-bottom: var(--mb-2);
  font-size: 1.5rem;
  color: var(--second-color);
}
.home__social-icon:hover{
  color: var(--first-color);
}
.home__img{
  position: absolute;
  right: 0;
  bottom: 0;
  width: 300px;
}

/*BUTTONS*/
.button{
  display: inline-block;
  background-color: var(--second-color);
  color: #000;
  padding: .75rem 2.5rem;
  font-weight: var(--font-semi);
  border-radius: .5rem;
}

.button:hover {
  color: var(--first-color);
}

/* ===== ABOUT =====*/
.about__container{
  row-gap: 2rem;
  text-align: center;
}
.about__subtitle{
  margin-bottom: var(--mb-2);
}

.about__text {
  padding: 1rem;
  font-weight: 600;
  font-size: 18px;
  color: #22cfc1;
}

.about__img{
  justify-self: center;
}
.about__img img{
  width: 200px;
  border-radius: .5rem;

}

/* ===== SKILLS =====*/
.skills__container{
  border-radius: 4px;
  row-gap: 2rem;
  text-align: center;
  background-color: #00ffea10;
}


.skills__data{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  position: relative;
  font-weight: var(--font-semi);
  padding: .5rem 1rem;
  margin: var(--mb-4);
  border-radius: .5rem;
  z-index: 1;
}

.skills__item {
  padding: 0.5rem;
  display: flex;
  align-items: center;
}

.skills__names{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.skills__name::before {
  content: "▹";
  left: 0px;
  color: var(--second-color);
  font-size: var(--fz-sm);
  line-height: 12px;
  margin-right: 0.1rem;
}

.skills__name {
  font-size: 14px;
  color: var(--second-color);
}


/* ===== WORK =====*/
.work__container{
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
  background-color: #00ffea10;
  padding: 2rem;
  margin-bottom: 3rem;
  border-radius: 5px;
  transition: ease-in-out 0.3s;
}

.work__container:hover {
  transform: scale(1.01);
}

.work__img{
  box-shadow: 0 4px 25px rgba(14,36,49,.15);
  border-radius: .5rem;
  border-radius: 0.5rem;
}

.work-preview {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
}

.work-links {
  display: flex;
  width: 100%;
  justify-content: flex-start;
}

.work-links > a > img {
  width: 27px;
  transition: ease-in-out 0.3s;
}

.work-links > a > img:hover {
  transform: scale(1.09);
}


.work-title {
  font-weight: 200;
  font-size: 1.5rem;
  margin-bottom: 5px;
  color: var(--second-color);
}

.work-intro {
  font-weight: 400;
  font-size: 0.9rem;
  margin: 1rem 0;
}

.work__img {
  display: flex;
  max-width: 400px;
}

.work__img img{
  width: 100%;
  height: 100%;
  object-fit: contain;
  transition: 1s;
  cursor: pointer;
  border-radius: 5px;
}
.work__img img:hover{
  transform: scale(1.01);
}

/* ===== CONTACT =====*/
.contact__input{
  width: 100%;
  font-size: var(--normal-font-size);
  font-weight: var(--font-semi);
  padding: 1rem;
  border-radius: .5rem;
  border: 1.5px solid var(--second-color);
  outline: none;
  margin-bottom: var(--mb-4);
}
.contact__button{
  display: block;
  border: none;
  outline: none;
  font-size: var(--normal-font-size);
  cursor: pointer;
  margin-left: auto;
}

/* ===== FOOTER =====*/
.footer{
  background-color: var(--second-color);
  color: #000;
  text-align: center;
  font-weight: var(--font-semi);
  padding: 1rem 0;
}
.footer__title{
  font-size: 2rem;
  margin-bottom: var(--mb-4);
}
.footer__social{
  margin-bottom: var(--mb-4);
}
.footer__icon{
  font-size: 1.5rem;
  color: #fff;
  margin: 0 var(--mb-2)
}

/* ===== MEDIA QUERIES=====*/
@media screen and (min-width: 768px){
  body{
    margin: 0;
  }
  .section{
    padding-top: 4rem;
    padding-bottom: 3rem;
  }
  .section-title{
    margin-bottom: var(--mb-6);
  }
  .section-title::after{
    width: 80px;
    top: 3rem;
  }

  .nav{
    height: calc(var(--header-height) + 1rem);
  }
  .nav__list{
    display: flex;
    padding-top: 0;
  }
  .nav__item{
    margin-left: var(--mb-6);
    margin-bottom: 0;
  }
  .nav__toggle{
    display: none;
  }
  .nav__link{
    color: #fff !important;
  }

  .home{
    height: 100vh;
  }
  .home__data{
    align-self: flex-end;
  }
  .home__social{
    padding-top: 0;
    padding-bottom: 2.5rem;
    flex-direction: row;
    align-self: flex-end;
  }
  .home__social-icon{
    margin-bottom: 0;
    margin-right: var(--mb-4);
  }
  .home__img{
    width: 457px;
    bottom: 15%;
  }

  .about__container, .skills__container{
    grid-template-columns: repeat(2,1fr);
    align-items: center;
    text-align: initial;
  }
  .about__img img{
    width: 300px;
  }
  .work__container{ 
    display: flex;
    flex-direction: row;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2,1fr);
    column-gap: 2rem;
  }

  .contact__form{
    width: 360px;
  }
  .contact__container{
    justify-items: center;
  }
}


/* MEDIA QUERY ------------------------------------> */
@media screen and (min-width: 1024px){
  .bd-grid{
    margin-left: auto;
    margin-right: auto;
  }
  .home__img{
    right: 10%;
  }
}

